tests/cli_diagnostics/run_python_ffi_sandbox_exec_failed.stderr.golden
tests/fixtures/run_python_ffi.curlee:2:12: error: python sandbox exec failed
  |
  |   unsafe { python_ffi.call(); }
  |            ^^^^^^^^^^^^^^^^^
